--- a/index.html
+++ b/index.html
@@ -71,8 +71,77 @@
                         <div class="widget_title_text">Latest News</div>
                         <div class="widget_title_bar"></div>
                     </div>
-                    <div class="widget_body">
-                        ...
+                    <div class="widget_body flex">
+                            <article>
+                                <a href="">
+                                    <div class="news_data">
+                                        <div class="news_posted_at">12 DEC 12</div>
+                                        <div class="news_comments">2</div>
+                                    </div>
+                                    <div class="news_thumbnail">
+                                        <img src="assets/img/doutor.jpg" alt="Exame médico">
+                                    </div>
+                                    <div class="news_title">
+                                        Lorem ipsum dolor sit amet velum
+                                    </div>
+                                    <div class="news_resume">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, maiores officia. Delectus similique incidunt vero!
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, maiores officia. Delectus similique incidunt vero!
+                                    </div>
+                                </a>
+                            </article>
+                            <article>
+                                <a href="">
+                                    <div class="news_data">
+                                        <div class="news_posted_at">12 DEC 12</div>
+                                        <div class="news_comments">2</div>
+                                    </div>
+                                    <div class="news_thumbnail">
+                                        <img src="assets/img/doutor.jpg" alt="Exame médico">
+                                    </div>
+                                    <div class="news_title">
+                                    Lorem ipsum dolor sit amet velum
+                                    </div>
+                                    <div class="news_resume">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, maiores officia. Delectus similique incidunt vero!
+                                    </div>
+                                </a>
+                            </article>
+                            <article>
+                                <a href="">
+                                    <div class="news_data">
+                                        <div class="news_posted_at">12 DEC 12</div>
+                                        <div class="news_comments">2</div>
+                                    </div>
+                                    <div class="news_thumbnail">
+                                        <img src="assets/img/doutor.jpg" alt="Exame médico">
+                                    </div>
+                                    <div class="news_title">
+                                    Lorem ipsum dolor sit amet velum
+                                    </div>
+                                    <div class="news_resume">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, maiores officia. Delectus similique incidunt vero!
+                                    </div>
+                                </a>
+                            </article>
+                            <article>
+                                <a href="">
+                                    <div class="news_data">
+                                        <div class="news_posted_at">12 DEC 12</div>
+                                        <div class="news_comments">2</div>
+                                    </div>
+                                    <div class="news_thumbnail">
+                                        <img src="assets/img/doutor.jpg" alt="Exame médico">
+                                    </div>
+                                    <div class="news_title">
+                                    Lorem ipsum dolor sit amet velum
+                                    </div>
+                                    <div class="news_resume">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, maiores officia. Delectus similique incidunt vero!
+                                    </div>
+                                </a>
+                            </article>
+                        </a>
                     </div>
                 </div>
            </section>
