--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>medicenter</title>
+    <title>MedCenter</title>
 </head>
 <body>
     <header>
@@ -16,10 +16,9 @@
                 <nav>
                     <ul>
                         <li class="active"><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
+                        <li><a href="">BLOG</a></li>
+                        <li><a href="">PAGES</a></li>
+                        <li><a href="">DEPARTMENTS</a></li>
                     </ul>
                 </nav>
             </div>
@@ -195,5 +194,124 @@
            </aside>
         </div>
     </section>
+
+    <footer>
+        <div class="container flexColumn">
+            <div class="footer_menu">
+                <div class="fm_1">
+                    <a href="">
+                        <div class="banner_title">Health Insurance </div>
+                        <div class="banner_desc">Here in medicenter we have individual →</div>
+                    </a>
+                </div>
+                <div class="fm_2">
+                    <a href="">
+                        <div class="banner_title">Medical Records </div>
+                        <div class="banner_desc">Here in medicenter we have individual →</div>
+                    </a>
+                </div>
+                <div class="fm_3">
+                    <a href="">
+                        <div class="banner_title">Online Bill Pay </div>
+                        <div class="banner_desc">Here in medicenter we have individual →</div>
+                    </a>
+
+                </div>
+            </div>
+            <div class="footer_area">
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">MedCenter Clinic</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            <div class="widget_footer_resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perspiciatis, suscipit explicabo.
+                            </div>
+                            <div class="widget_footer_local">
+                                <div class="widget_footer_local_address">
+                                    Medicenter Clinic <br>
+                                    33 Farlane Street<br>
+                                    Keilor East<br>
+                                    VIC 3033, Australia<br>
+                                </div>
+                                <div class="widget_footer_local_phone">
+                                    <br>
+                                    +123 655 655<br>
+                                    +123 755 755<br>
+                                    <a href="mailto:medicenter@mail.com">medicenter@mail.com</a><p></p>
+                                </div>
+                            </div>
+                            <div class="widget_footer_socialnetwork">
+                                <div class="widget_footer_socialnetwork_link"><a href=""></a></div>
+                                <div class="widget_footer_socialnetwork_link"><a href=""></a></div>
+                                <div class="widget_footer_socialnetwork_link"><a href=""></a></div>
+                                <div class="widget_footer_socialnetwork_link"><a href=""></a></div>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Latest Posts</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            <div class="widget_footer_post">
+                                <div class="widget_footer_post">
+                                    <div class="widget_footer_post_text">
+                                        → Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea,
+                                        voluptatibus earum.
+                                        <div class="widget_footer_post_year">6 years ago</div>
+                                    </div>
+                                    <div class="widget_footer_post_text">
+                                        → Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero odio sunt magnam, odit cupiditate laudantium modi earum, vitae, exercitationem ad est incidunt esse? Eius illum, qui nulla in aperiam labore.
+                                        <div class="widget_footer_post_year">6 years ago</div>
+                                    </div>
+                                    <div class="widget_footer_post_text">
+                                        → Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid repudiandae deserunt officiis dignissimos, nihil expedita officia maxime iusto doloremque omnis nostrum doloribus consectetur quasi magnam numquam saepe perspiciatis rerum cumque.
+                                        <div class="widget_footer_post_year">6 years ago</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Latest Tweets</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            <div class="widget_footer_post">
+                                <div class="widget_footer_post_text tweet_text">
+                                    → Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis facere tempora beatae, quo, inventore dolorum molestias consectetur laudantium expedita neque dolore aperiam. Ipsum beatae nobis maxime, quod totam animi repudiandae.#csv... <a href="">t.co/frsadhadjadha</a>
+                                    <div class="widget_footer_post_year">4 days ago</div>
+                                </div>
+                            </div>
+                            <div class="widget_footer_post">
+                                <div class="widget_footer_post_text tweet_text">
+                                    → Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis facere tempora beatae, quo, inventore dolorum molestias consectetur laudantium expedita neque dolore aperiam. Ipsum beatae nobis maxime, quod totam animi repudiandae.#csv... <a href="">t.co/frsadhadjadha</a>
+                                    <div class="widget_footer_post_year">4 days ago</div>
+                                </div>
+                            </div>
+                            <div class="widget_footer_post">
+                                <div class="widget_footer_post_text tweet_text">
+                                    → Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis facere tempora beatae, quo, inventore dolorum molestias consectetur laudantium expedita neque dolore aperiam. Ipsum beatae nobis maxime, quod totam animi repudiandae.#csv... <a href="">t.co/frsadhadjadha</a>
+                                    <div class="widget_footer_post_year">4 days ago</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_copy">
+                &#174; Copyright - Todos os direitos reservados
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
